@@ -20,6 +20,7 @@ import com.google.common.base.Joiner;
 import net.tanesha.recaptcha.ReCaptchaImpl;
 import net.tanesha.recaptcha.ReCaptchaResponse;
 import org.apache.commons.lang.RandomStringUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.entrystore.Context;
 import org.entrystore.Entry;
 import org.entrystore.GraphType;
@@ -50,10 +51,10 @@ import org.restlet.resource.ResourceException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URL;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.security.SecureRandom;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -64,13 +65,15 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.Set;
 
+import static org.restlet.data.Status.CLIENT_ERROR_REQUEST_ENTITY_TOO_LARGE;
+
 /**
  * Resource to handle manual sign-ups.
- * 
+ *
  * @author Hannes Ebner
  */
 public class SignupResource extends BaseResource {
-	
+
 	private static final Logger log = LoggerFactory.getLogger(SignupResource.class);
 
 	protected SimpleHTML html = new SimpleHTML("Sign-up");
@@ -140,17 +143,13 @@ public class SignupResource extends BaseResource {
 			// Create user
 			Entry entry = pm.createResource(null, GraphType.User, null, null);
 			if (entry == null) {
-				try {
-					if (ci.urlFailure != null) {
-						getResponse().redirectTemporary(URLDecoder.decode(ci.urlFailure, "UTF-8"));
-						return new EmptyRepresentation();
-					} else {
-						getResponse().setStatus(Status.SERVER_ERROR_INTERNAL);
-					}
-					return html.representation("Unable to create user.");
-				} catch (UnsupportedEncodingException e) {
-					log.warn("Unable to decode URL: " + e.getMessage());
+				if (ci.urlFailure != null) {
+					getResponse().redirectTemporary(URLDecoder.decode(ci.urlFailure, StandardCharsets.UTF_8));
+					return new EmptyRepresentation();
+				} else {
+					getResponse().setStatus(Status.SERVER_ERROR_INTERNAL);
 				}
+				return html.representation("Unable to create user.");
 			}
 
 			// Set alias, metadata and password
@@ -178,25 +177,21 @@ public class SignupResource extends BaseResource {
 			pm.setAuthenticatedUserURI(authUser);
 		}
 
-		try {
-			if (ci.urlSuccess != null) {
-				getResponse().redirectTemporary(URLDecoder.decode(ci.urlSuccess, "UTF-8"));
-				return new EmptyRepresentation();
-			}
-			getResponse().setStatus(Status.SUCCESS_CREATED);
-			return html.representation("Sign-up successful.");
-		} catch (UnsupportedEncodingException e) {
-			log.warn("Unable to decode URL: " + e.getMessage());
+		if (ci.urlSuccess != null) {
+			getResponse().redirectTemporary(URLDecoder.decode(ci.urlSuccess, StandardCharsets.UTF_8));
+			return new EmptyRepresentation();
 		}
+		getResponse().setStatus(Status.SUCCESS_CREATED);
+		return html.representation("Sign-up successful.");
 
-		getResponse().setStatus(Status.CLIENT_ERROR_BAD_REQUEST);
-		return html.representation("User sign-up failed.");
 	}
 
 	@Post
 	public void acceptRepresentation(Representation r) {
 		if (HttpUtil.isLargerThan(r, 32768)) {
-			log.warn("The size of the representation is larger than 32KB or unknown, similar requests may be blocked in future versions");
+			log.warn("The size of the representation is larger than 32KB or unknown, request blocked");
+			getResponse().setStatus(CLIENT_ERROR_REQUEST_ENTITY_TOO_LARGE);
+			return;
 		}
 
 		SignupInfo ci = new SignupInfo();
@@ -240,7 +235,7 @@ public class SignupResource extends BaseResource {
 				}
 
 				// Extract custom properties
-				Iterator siJsonKeyIt = siJson.keys();
+				Iterator<String> siJsonKeyIt = siJson.keys();
 				while (siJsonKeyIt.hasNext()) {
 					String key = (String) siJsonKeyIt.next();
 					if (key.startsWith(customPropPrefix) && (key.length() > customPropPrefix.length())) {
@@ -277,7 +272,7 @@ public class SignupResource extends BaseResource {
 			return;
 		}
 
-		if (ci.firstName.trim().length() < 2 || ci.lastName.trim().length() < 2) {
+		if (isInvalidName(ci.firstName) || isInvalidName(ci.lastName)) {
 			getResponse().setStatus(Status.CLIENT_ERROR_BAD_REQUEST);
 			getResponse().setEntity(html.representation("Invalid name."));
 			return;
@@ -334,7 +329,7 @@ public class SignupResource extends BaseResource {
 				log.info("Valid reCaptcha for " + ci.email);
 			} else {
 				log.info("Invalid reCaptcha for " + ci.email);
-				getResponse().setStatus(Status.CLIENT_ERROR_BAD_REQUEST);
+				getResponse().setStatus(Status.CLIENT_ERROR_EXPECTATION_FAILED);
 				getResponse().setEntity(html.representation("Invalid reCaptcha received."));
 				return;
 			}
@@ -384,6 +379,19 @@ public class SignupResource extends BaseResource {
 		sb.append(html.footer());
 
 		return sb.toString();
+	}
+
+	boolean isInvalidName(String name) {
+		// must not be null or too short
+		if (name == null || name.length() < 2) {
+			return true;
+		}
+		// must not be a URL (covers mailto: and others with slash)
+		if (name.contains(":") || name.contains("/")) {
+			return true;
+		}
+		// must not consist of more than five words (counting spaces in between words)
+		return StringUtils.countMatches(name, " ") >= 5;
 	}
 
 }
